--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -58,7 +58,7 @@ jobs:
         sudo -E apt-get clean
     - name: Clone source code
       env: 
-        REPO_URL: https://github.com/wyy007cn/LeanOpenWrt
+        REPO_URL: https://github.com/wyy007cn/lean-lede
         REPO_BRANCH: master
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
