--- a/.github/workflows/Build-Lienol-openwrt.yml
+++ b/.github/workflows/Build-Lienol-openwrt.yml
@@ -14,7 +14,7 @@ on:
 env:
   REPO_URL: https://github.com/Lienol/openwrt.git
   REPO_BRANCH: dev-19.07
-  CONFIG_FILE: .config
+  CONFIG_FILE: Lienol.config
   DIY_SH: diy.sh
   FREE_UP_DISK: false
   SSH_ACTIONS: false
@@ -109,5 +109,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        name: OpenWrt_firmware
+        name: Lienol_OpenWrt_K2P_firmware
         path: ${{ env.FIRMWARE }}
