--- a/.github/workflows/Build-chongshengB-padavan.yml
+++ b/.github/workflows/Build-chongshengB-padavan.yml
@@ -97,5 +97,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan-packages
+        name: chongshengB-Padavan-packages
         path: /opt/images
