--- a/.github/workflows/Build-Kevinmx-openwrt.yml
+++ b/.github/workflows/Build-Kevinmx-openwrt.yml
@@ -8,8 +8,10 @@ on:
       - master
     paths:
       - '.config'
-  schedule:
-    - cron: 0 4 * * 5 # 北京时间每周五中午12:00编译
+#schedule:
+#  - cron: 0 4 * * 5 # 北京时间每周五中午12:00编译
+  watch:
+    types: [started]
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
