--- a/.github/workflows/Build-Lienol-openwrt.yml
+++ b/.github/workflows/Build-Lienol-openwrt.yml
@@ -8,9 +8,11 @@ on:
       - master
     paths:
       - '.config'
-  schedule:
-    - cron: 0 4 * * 5 # 北京时间每周五中午12:00编译
-
+#  schedule:
+#    - cron: 0 4 * * 5 # 北京时间每周五中午12:00编译
+  watch:
+    types: [started]
+    
 env:
   REPO_URL: https://github.com/Lienol/openwrt.git
   REPO_BRANCH: dev-19.07
