--- a/.github/workflows/Build-Lean-Openwrt-K2P.yml
+++ b/.github/workflows/Build-Lean-Openwrt-K2P.yml
@@ -12,7 +12,7 @@ on:
     branches:
       - master
     paths:
-      - "K2P.config"
+      - "Router-config/K2P/K2P.config"
   #  schedule:
   #    - cron: 0 8 * * 5
   watch:
