--- a/.github/workflows/Build-Openwrt-19.07-K2P.yml
+++ b/.github/workflows/Build-Openwrt-19.07-K2P.yml
@@ -12,7 +12,7 @@ on:
     branches:
       - master
     paths:
-      - "K2P-19.07.config"
+      - "Router-config/K2P/K2P-19.07.config"
   #  schedule:
   #    - cron: 0 8 * * 5
   watch:
