--- a/.github/workflows/Build-Kevinmx-openwrt.yml
+++ b/.github/workflows/Build-Kevinmx-openwrt.yml
@@ -8,6 +8,7 @@ on:
       - master
     paths:
       - 'Router-config/K2P/kevinmx.config'
+      - 'Router-config/K2P/diy.sh'
 #schedule:
 #  - cron: 0 4 * * 5 # 北京时间每周五中午12:00编译
   watch:
@@ -15,7 +16,7 @@ on:
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: dev-19.07
+  REPO_BRANCH: master
   CONFIG_FILE: kevinmx.config
   DIY_SH: diy.sh
   FREE_UP_DISK: false
