--- a/.github/workflows/Build-Openwrt-19.07-K2P.yml
+++ b/.github/workflows/Build-Openwrt-19.07-K2P.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Load custom configuration
         env:
           CONFIG_FILE: "K2P-19.07.config"
-          DIY_SH: "bash <(curl -fsSL https://github.com/wyy007cn/wyy007cn.github.io/tree/master/Router-config/K2P/diy.sh)"
+          DIY_SH: "diy.sh"
         run: |
           [ -e files ] && mv files openwrt/files
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
