--- a/.github/workflows/Build-Openwrt-Kevinmx.yml
+++ b/.github/workflows/Build-Openwrt-Kevinmx.yml
@@ -18,7 +18,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   CONFIG_FILE: kevinmx.config
-  DIY_SH: curl -fsSL https://github.com/wyy007cn/wyy007cn.github.io/tree/master/Router-config/K2P/diy.sh
+  DIY_SH: Router-config/K2P/diy.sh
   FREE_UP_DISK: false
   SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
