--- a/.github/workflows/Build-Openwrt-19.07-K2P.yml
+++ b/.github/workflows/Build-Openwrt-19.07-K2P.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Load custom configuration
         env:
           CONFIG_FILE: "K2P-19.07.config"
-          DIY_SH: "diy.sh"
+          DIY_SH: Router-config/K2P/diy.sh
         run: |
           [ -e files ] && mv files openwrt/files
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
