--- a/.github/workflows/Build Padavan K2P CI.yml
+++ b/.github/workflows/Build Padavan K2P CI.yml
@@ -6,7 +6,7 @@
 # Build 2020-02-20 19:10
 #=================================================
 
-name: Build Padavan CI
+name: Build Padavan K2P CI
 
 on: 
 
@@ -49,7 +49,7 @@ jobs:
         git clone --depth=1 https://github.com/hanwckf/rt-n56u.git /opt/rt-n56u
         cd /opt/rt-n56u/toolchain-mipsel
         mkdir -p toolchain-3.4.x
-        wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.0/mipsel-linux-uclibc.tar.xz
+        wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
         tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
         mkdir -p /opt/images/
     - name: Diy script
@@ -71,5 +71,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan_CI_firmware
+        name: Padavan_K2P_CI_firmware
         path: /opt/images
