--- a/Router-config/K2P/OpenWrt K2P.config
+++ b/Router-config/K2P/OpenWrt K2P.config
@@ -6,24 +6,24 @@ CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
 CONFIG_KERNEL_MIPS_FPU_EMULATOR=y
 
 #add ipv6 support
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
-CONFIG_PACKAGE_kmod-ip6tables-extra=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
-CONFIG_PACKAGE_odhcpd=y
-CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
+#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+#CONFIG_PACKAGE_ip6tables=y
+#CONFIG_PACKAGE_ip6tables-extra=y
+#CONFIG_PACKAGE_ip6tables-mod-nat=y
+#CONFIG_PACKAGE_kmod-ip6tables-extra=y
+#CONFIG_PACKAGE_kmod-ipt-nat6=y
+#CONFIG_PACKAGE_kmod-nf-nat6=y
+#CONFIG_PACKAGE_luci-proto-ipv6=y
+#CONFIG_PACKAGE_odhcp6c=y
+#CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+#CONFIG_PACKAGE_odhcpd=y
+#CONFIG_PACKAGE_odhcpd_full_ext_cer_id=0
 
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_tcpdump=y
+#CONFIG_PACKAGE_htop=y
+#CONFIG_PACKAGE_curl=y
+#CONFIG_PACKAGE_wget=y
+#CONFIG_PACKAGE_iperf3=y
+#CONFIG_PACKAGE_tcpdump=y
 
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-diag-core=y
@@ -34,13 +34,13 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 
 #add sftp support
-CONFIG_PACKAGE_openssh-sftp-client=y
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
+#CONFIG_PACKAGE_openssh-sftp-client=y
+#CONFIG_PACKAGE_openssh-sftp-server=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
 
 # CONFIG_PACKAGE_luci-app-frpc is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
