--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: 找死啊
+subtitle: 打倒到达
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
@@ -26,11 +26,11 @@ urls:
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hello, My Name is John Doe. I love to Code and Design. devlopr-jekyll is a theme built for developers.
-author_email: "johndoe@gmail.com"
-author_location: India
-author_website_url: "http://johndoe.com"
+author: Yongyong
+author_bio: 大家好.
+author_email: "wyy007cn@gmail.com"
+author_location: 北京
+author_website_url: "http://163.com"
 
 author_work_experiences:
             - company_name: Google
@@ -67,25 +67,25 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  johndoe
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username:  
+github_username:   
+facebook_username:  
+linkedin_username:  
+behance_username:  
+instagram_username:  
+medium_username:  
+telegram_username:  
+dribbble_username:  
+flickr_username:  
 
 #for comments using disqus
-disqus_shortname: sujay-kundu
+#disqus_shortname:  
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+#wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+#mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
 formspree_email: johndoe@gmail.com
@@ -95,8 +95,9 @@ markdown: kramdown
 highlighter: rouge
 permalink: pretty
 
+show_downloads: ["false"]
 # google analytics
-google_analytics: UA-46783401-10
+#google_analytics: UA-46783401-10
 
 # Choose what to show ( can be true or false)
 show_author_work_experiences: true
@@ -146,7 +147,8 @@ defaults:
 
 # Build settings
 
-theme: devlopr
+#theme: devlopr
+theme: jekyll-theme-leap-day
 plugins:
   - jekyll-feed
   - jekyll-paginate
